--- a/withdrawal.html
+++ b/withdrawal.html
@@ -236,14 +236,12 @@
             <div class="flex flex-col md:flex-row md:items-center justify-between gap-4">
               <div>
                 <h3 class="text-lg font-bold text-white mb-2">Available Balance</h3>
-                <div class="relative overflow-hidden">
+                <div class="relative overflow-hidden h-9">
                   <!-- Balance Display -->
-                  <div class="text-3xl font-bold text-white available-balance">$24,847.84</div>
-                  <!-- Loading State -->
-                  <div id="balance-loading" class="absolute inset-0 backdrop-blur-sm bg-gray-800/50 flex items-center justify-start hidden">
-                    <div class="animate-pulse flex space-x-4">
-                      <div class="h-8 w-48 bg-gray-600 rounded"></div>
-                    </div>
+                  <div class="text-3xl font-bold text-white available-balance hidden"></div>
+                  <!-- Loading Skeleton -->
+                  <div id="balance-skeleton" class="absolute inset-0 flex items-center">
+                    <div class="animate-pulse h-8 w-48 bg-gray-700 rounded-md"></div>
                   </div>
                 </div>
                 <p class="text-gray-400 mt-1">Ready for withdrawal</p>
@@ -416,22 +414,58 @@
                     <th class="px-6 py-3 font-medium">Method</th>
                     <th class="px-6 py-3 font-medium">Date</th>
                     <th class="px-6 py-3 font-medium">Status</th>
-                    <th class="px-6 py-3 font-medium">Amount</th>
-                    <th class="px-6 py-3 font-medium"></th>
+                    <th class="px-6 py-3 font-medium text-right">Amount</th>
                   </tr>
                 </thead>
-                <tbody>
-                  <tr>
-                    <td colspan="6" class="px-6 py-8 text-center text-gray-400">
-                      Loading recent withdrawals...
-                    </td>
+                <tbody id="recent-withdrawals-table-body" class="hidden">
+                  <!-- Dynamic content will be populated here -->
+                </tbody>
+                <tbody id="recent-withdrawals-table-skeleton">
+                  <!-- Skeleton Row -->
+                  <tr class="animate-pulse">
+                    <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-28"></div></td>
+                    <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-24"></div></td>
+                    <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-20"></div></td>
+                    <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-16"></div></td>
+                    <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-20 ml-auto"></div></td>
+                  </tr>
+                  <!-- Skeleton Row -->
+                  <tr class="animate-pulse">
+                    <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-28"></div></td>
+                    <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-24"></div></td>
+                    <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-20"></div></td>
+                    <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-16"></div></td>
+                    <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-20 ml-auto"></div></td>
                   </tr>
                 </tbody>
               </table>
-              <div id="recent-withdrawals-cards" class="lg:hidden space-y-4 p-4">
-                  <div class="text-center text-gray-400">
-                    Loading recent withdrawals...
+
+              <div id="recent-withdrawals-cards" class="lg:hidden space-y-4 p-4 hidden">
+                <!-- Dynamic mobile content will be populated here -->
+              </div>
+              <div id="recent-withdrawals-cards-skeleton" class="lg:hidden space-y-4 p-4">
+                 <!-- Skeleton Card -->
+                <div class="bg-gray-800 rounded-lg p-4 animate-pulse">
+                  <div class="flex justify-between items-center mb-3">
+                    <div class="h-4 bg-gray-700 rounded w-28"></div>
+                    <div class="h-6 bg-gray-700 rounded w-24"></div>
                   </div>
+                  <div class="flex justify-between items-center text-sm">
+                    <div class="h-4 bg-gray-700 rounded w-24"></div>
+                    <div class="h-4 bg-gray-700 rounded w-16"></div>
+                  </div>
+                </div>
+                 <!-- Skeleton Card -->
+                <div class="bg-gray-800 rounded-lg p-4 animate-pulse">
+                  <div class="flex justify-between items-center mb-3">
+                    <div class="h-4 bg-gray-700 rounded w-28"></div>
+                    <div class="h-6 bg-gray-700 rounded w-24"></div>
+                  </div>
+                  <div class="flex justify-between items-center text-sm">
+                    <div class="h-4 bg-gray-700 rounded w-24"></div>
+                    <div class="h-4 bg-gray-700 rounded w-16"></div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
