--- a/dashboard.html
+++ b/dashboard.html
@@ -213,7 +213,7 @@
             <div>
               <h1 class="text-xl sm:text-2xl font-bold text-white">Dashboard</h1>
               <p class="text-gray-400 mt-1 text-sm sm:text-base">
-                Welcome back, <span id="user-name-placeholder" class="font-medium">User</span>!
+                Welcome back, <span id="user-name-placeholder" class="font-medium"></span>!
               </p>
             </div>
           </div>
