--- a/transaction-history.html
+++ b/transaction-history.html
@@ -132,7 +132,7 @@
             </div>
             <form id="filter-form" class="space-y-6">
               <div class="grid grid-cols-1 md:grid-cols-12 gap-4 lg:gap-6">
-                <div class="md:col-span-5">
+                <div class="md:col-span-6">
                   <label class="block text-sm font-medium text-white mb-2">Date Range</label>
                   <div class="flex flex-col sm:flex-row gap-2">
                     <div class="relative w-full">
@@ -155,7 +155,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-400 pointer-events-none"><polyline points="6 9 12 15 18 9"/></svg>
                   </div>
                 </div>
-                <div class="md:col-span-4">
+                <div class="md:col-span-3">
                   <label class="block text-sm font-medium text-white mb-2">Status</label>
                   <div class="relative">
                     <select name="status" id="status-select" class="w-full border border-gray-600 bg-gray-700 text-white rounded-md py-3 px-4 appearance-none focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-blue-400">
@@ -165,12 +165,9 @@
                   </div>
                 </div>
               </div>
-              <div class="flex flex-col sm:flex-row gap-4 sm:justify-between sm:items-center">
-                <div class="relative flex-1 max-w-md">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.35-4.35"/></svg>
-                  <input type="text" id="search-input" class="pl-10 w-full border border-gray-600 bg-gray-700 text-white rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-blue-400" placeholder="Search by ID or details...">
-                </div>
-                <button type="submit" class="w-full sm:w-auto bg-blue-600 text-white py-3 px-8 rounded-md hover:bg-blue-700 transition-colors font-medium">Apply Filters</button>
+              <div class="flex justify-end pt-4 gap-4">
+                <button type="button" id="reset-filters-btn" class="w-full sm:w-auto bg-gray-600 text-white py-3 px-6 rounded-md hover:bg-gray-700 transition-colors font-medium text-sm">Reset</button>
+                <button type="submit" class="w-full sm:w-auto bg-blue-600 text-white py-3 px-6 rounded-md hover:bg-blue-700 transition-colors font-medium text-sm">Apply Filters</button>
               </div>
             </form>
           </div>
@@ -212,22 +209,91 @@
 
             <!-- Skeletons -->
             <div id="skeleton-loader">
-                <div class="hidden lg:block overflow-x-auto">
-                    <table class="w-full"><tbody>
-                        <tr class="animate-pulse">
-                            <td class="p-6"><div class="h-5 bg-gray-700 rounded w-3/4"></div></td><td class="p-6"><div class="h-5 bg-gray-700 rounded w-1/2"></div></td>
-                            <td class="p-6"><div class="h-5 bg-gray-700 rounded w-1/2"></div></td><td class="p-6"><div class="h-5 bg-gray-700 rounded w-1/2"></div></td>
-                            <td class="p-6"><div class="h-5 bg-gray-700 rounded w-20"></div></td><td class="p-6"><div class="h-5 bg-gray-700 rounded w-24"></div></td>
-                            <td class="p-6"><div class="h-5 bg-gray-700 rounded w-20"></div></td>
-                        </tr>
-                        <tr class="animate-pulse"><td class="p-6"><div class="h-5 bg-gray-700 rounded w-3/4"></div></td><td class="p-6"><div class="h-5 bg-gray-700 rounded w-1/2"></div></td><td class="p-6"><div class="h-5 bg-gray-700 rounded w-1/2"></div></td><td class="p-6"><div class="h-5 bg-gray-700 rounded w-1/2"></div></td><td class="p-6"><div class="h-5 bg-gray-700 rounded w-20"></div></td><td class="p-6"><div class="h-5 bg-gray-700 rounded w-24"></div></td><td class="p-6"><div class="h-5 bg-gray-700 rounded w-20"></div></td></tr>
-                        <tr class="animate-pulse"><td class="p-6"><div class="h-5 bg-gray-700 rounded w-3/4"></div></td><td class="p-6"><div class="h-5 bg-gray-700 rounded w-1/2"></div></td><td class="p-6"><div class="h-5 bg-gray-700 rounded w-1/2"></div></td><td class="p-6"><div class="h-5 bg-gray-700 rounded w-1/2"></div></td><td class="p-6"><div class="h-5 bg-gray-700 rounded w-20"></div></td><td class="p-6"><div class="h-5 bg-gray-700 rounded w-24"></div></td><td class="p-6"><div class="h-5 bg-gray-700 rounded w-20"></div></td></tr>
-                    </tbody></table>
+              <div class="hidden lg:block">
+                <table class="w-full">
+                  <tbody class="divide-y divide-gray-700">
+                    <tr class="animate-pulse">
+                      <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-24"></div></td>
+                      <td class="px-6 py-4"><div class="flex items-center gap-3"><div class="w-6 h-6 bg-gray-700 rounded-full"></div><div class="h-4 bg-gray-700 rounded w-16"></div></div></td>
+                      <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-32"></div></td>
+                      <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-28 mb-2"></div><div class="h-3 bg-gray-700 rounded w-20"></div></td>
+                      <td class="px-6 py-4"><div class="h-5 bg-gray-700 rounded-full w-20"></div></td>
+                      <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-20"></div></td>
+                      <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-16"></div></td>
+                    </tr>
+                    <tr class="animate-pulse">
+                      <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-28"></div></td>
+                      <td class="px-6 py-4"><div class="flex items-center gap-3"><div class="w-6 h-6 bg-gray-700 rounded-full"></div><div class="h-4 bg-gray-700 rounded w-20"></div></div></td>
+                      <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-40"></div></td>
+                      <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-28 mb-2"></div><div class="h-3 bg-gray-700 rounded w-20"></div></td>
+                      <td class="px-6 py-4"><div class="h-5 bg-gray-700 rounded-full w-24"></div></td>
+                      <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-24"></div></td>
+                      <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-16"></div></td>
+                    </tr>
+                    <tr class="animate-pulse">
+                      <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-24"></div></td>
+                      <td class="px-6 py-4"><div class="flex items-center gap-3"><div class="w-6 h-6 bg-gray-700 rounded-full"></div><div class="h-4 bg-gray-700 rounded w-16"></div></div></td>
+                      <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-36"></div></td>
+                      <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-28 mb-2"></div><div class="h-3 bg-gray-700 rounded w-20"></div></td>
+                      <td class="px-6 py-4"><div class="h-5 bg-gray-700 rounded-full w-20"></div></td>
+                      <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-20"></div></td>
+                      <td class="px-6 py-4"><div class="h-4 bg-gray-700 rounded w-16"></div></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <div class="lg:hidden space-y-4 p-4">
+                <div class="bg-gray-700 rounded-lg p-4 animate-pulse">
+                  <div class="flex justify-between items-start mb-4">
+                    <div class="flex items-center gap-3">
+                      <div class="w-8 h-8 rounded-full bg-gray-600"></div>
+                      <div>
+                        <div class="h-4 bg-gray-600 rounded w-24 mb-2"></div>
+                        <div class="h-3 bg-gray-600 rounded w-20"></div>
+                      </div>
+                    </div>
+                    <div class="text-right">
+                      <div class="h-6 bg-gray-600 rounded w-20 mb-2"></div>
+                      <div class="h-4 bg-gray-600 rounded-full w-16"></div>
+                    </div>
+                  </div>
+                  <div class="border-t border-gray-600 pt-3 grid grid-cols-2 gap-4">
+                    <div class="space-y-2">
+                      <div class="h-3 bg-gray-600 rounded w-16"></div>
+                      <div class="h-4 bg-gray-600 rounded w-28"></div>
+                    </div>
+                    <div class="space-y-2">
+                      <div class="h-3 bg-gray-600 rounded w-12"></div>
+                      <div class="h-4 bg-gray-600 rounded w-24"></div>
+                    </div>
+                  </div>
                 </div>
-                <div class="lg:hidden space-y-4 p-4">
-                    <div class="bg-gray-700 rounded-lg p-4 animate-pulse"><div class="flex justify-between items-start mb-3"><div class="flex items-center gap-3"><div class="w-8 h-8 rounded-full bg-gray-600"></div><div><div class="h-4 bg-gray-600 rounded w-24 mb-2"></div><div class="h-3 bg-gray-600 rounded w-16"></div></div></div><div class="text-right"><div class="h-6 bg-gray-600 rounded w-20 mb-2"></div><div class="h-4 bg-gray-600 rounded w-16 mt-1"></div></div></div><div class="border-t border-gray-600 pt-3 grid grid-cols-2 gap-4"><div class="space-y-2"><div class="h-3 bg-gray-600 rounded w-12"></div><div class="h-4 bg-gray-600 rounded w-24"></div></div><div class="space-y-2"><div class="h-3 bg-gray-600 rounded w-12"></div><div class="h-4 bg-gray-600 rounded w-24"></div></div></div></div>
-                    <div class="bg-gray-700 rounded-lg p-4 animate-pulse"><div class="flex justify-between items-start mb-3"><div class="flex items-center gap-3"><div class="w-8 h-8 rounded-full bg-gray-600"></div><div><div class="h-4 bg-gray-600 rounded w-24 mb-2"></div><div class="h-3 bg-gray-600 rounded w-16"></div></div></div><div class="text-right"><div class="h-6 bg-gray-600 rounded w-20 mb-2"></div><div class="h-4 bg-gray-600 rounded w-16 mt-1"></div></div></div><div class="border-t border-gray-600 pt-3 grid grid-cols-2 gap-4"><div class="space-y-2"><div class="h-3 bg-gray-600 rounded w-12"></div><div class="h-4 bg-gray-600 rounded w-24"></div></div><div class="space-y-2"><div class="h-3 bg-gray-600 rounded w-12"></div><div class="h-4 bg-gray-600 rounded w-24"></div></div></div></div>
+                <div class="bg-gray-700 rounded-lg p-4 animate-pulse">
+                  <div class="flex justify-between items-start mb-4">
+                    <div class="flex items-center gap-3">
+                      <div class="w-8 h-8 rounded-full bg-gray-600"></div>
+                      <div>
+                        <div class="h-4 bg-gray-600 rounded w-20 mb-2"></div>
+                        <div class="h-3 bg-gray-600 rounded w-16"></div>
+                      </div>
+                    </div>
+                    <div class="text-right">
+                      <div class="h-6 bg-gray-600 rounded w-24 mb-2"></div>
+                      <div class="h-4 bg-gray-600 rounded-full w-20"></div>
+                    </div>
+                  </div>
+                  <div class="border-t border-gray-600 pt-3 grid grid-cols-2 gap-4">
+                    <div class="space-y-2">
+                      <div class="h-3 bg-gray-600 rounded w-20"></div>
+                      <div class="h-4 bg-gray-600 rounded w-24"></div>
+                    </div>
+                    <div class="space-y-2">
+                      <div class="h-3 bg-gray-600 rounded w-12"></div>
+                      <div class="h-4 bg-gray-600 rounded w-28"></div>
+                    </div>
+                  </div>
                 </div>
+              </div>
             </div>
 
             <!-- No Results Message -->
