--- a/dashboard.html
+++ b/dashboard.html
@@ -239,19 +239,47 @@
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 lg:gap-6 mb-8">
             <!-- Cash Balance -->
             <div id="cash-balance-card" class="bg-gray-800 rounded-xl p-4 sm:p-6 shadow-sm">
-              <!-- Skeleton or real data will be injected here -->
+              <div class="flex items-center gap-3 mb-3">
+                <div class="skeleton w-10 h-10 rounded-lg shrink-0"></div>
+                <div class="flex-1 space-y-2">
+                  <div class="skeleton h-4 w-3/4"></div>
+                  <div class="skeleton h-6 w-1/2"></div>
+                </div>
+              </div>
+              <div class="skeleton h-3 w-full"></div>
             </div>
             <!-- Crypto Value -->
             <div id="crypto-value-card" class="bg-gray-800 rounded-xl p-4 sm:p-6 shadow-sm">
-              <!-- Skeleton or real data will be injected here -->
+              <div class="flex items-center gap-3 mb-3">
+                <div class="skeleton w-10 h-10 rounded-lg shrink-0"></div>
+                <div class="flex-1 space-y-2">
+                  <div class="skeleton h-4 w-3/4"></div>
+                  <div class="skeleton h-6 w-1/2"></div>
+                </div>
+              </div>
+              <div class="skeleton h-3 w-full"></div>
             </div>
             <!-- Locked Savings -->
             <div id="locked-savings-card" class="bg-gray-800 rounded-xl p-4 sm:p-6 shadow-sm">
-              <!-- Skeleton or real data will be injected here -->
+              <div class="flex items-center gap-3 mb-3">
+                <div class="skeleton w-10 h-10 rounded-lg shrink-0"></div>
+                <div class="flex-1 space-y-2">
+                  <div class="skeleton h-4 w-3/4"></div>
+                  <div class="skeleton h-6 w-1/2"></div>
+                </div>
+              </div>
+              <div class="skeleton h-3 w-full"></div>
             </div>
             <!-- Total Balance -->
             <div id="total-balance-card" class="bg-gray-800 rounded-xl p-4 sm:p-6 shadow-sm">
-              <!-- Skeleton or real data will be injected here -->
+              <div class="flex items-center gap-3 mb-3">
+                <div class="skeleton w-10 h-10 rounded-lg shrink-0"></div>
+                <div class="flex-1 space-y-2">
+                  <div class="skeleton h-4 w-3/4"></div>
+                  <div class="skeleton h-6 w-1/2"></div>
+                </div>
+              </div>
+              <div class="skeleton h-3 w-full"></div>
             </div>
           </div>
 
