--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CT Rocket - Dashboard</title>
+  <title>CT Rocket - Overview</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -211,10 +211,8 @@
             </button>
 
             <div>
-              <h1 class="text-xl sm:text-2xl font-bold text-white">Dashboard</h1>
-              <p class="text-gray-400 mt-1 text-sm sm:text-base">
-                Welcome back, <span id="user-name-placeholder" class="font-medium"></span>!
-              </p>
+              <h1 class="text-xl sm:text-2xl font-bold text-white">Overview</h1>
+              <p class="text-gray-400 mt-1 text-sm sm:text-base">Here's a summary of your account.</p>
             </div>
           </div>
 
@@ -229,12 +227,6 @@
       <!-- Content -->
       <div class="flex-1 p-4 sm:p-6 lg:p-8 bg-gray-900 overflow-y-auto">
         <div class="max-w-7xl mx-auto">
-          <!-- Welcome Header -->
-          <div class="mb-8">
-            <h1 class="text-2xl sm:text-3xl font-bold text-white" id="welcome-message">Good Morning!</h1>
-            <p class="text-gray-400 mt-1">Here's a summary of your account.</p>
-          </div>
-
           <!-- Stats Cards -->
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 lg:gap-6 mb-8">
             <!-- Cash Balance -->
