feat: initial commit

--- a/buy-crypto.html
+++ b/buy-crypto.html
@@ -234,7 +234,7 @@
 
           <div class="flex items-center gap-2 sm:gap-4">
             <div class="w-8 h-8 sm:w-10 sm:h-10 bg-blue-100 rounded-full flex items-center justify-center">
-              <span class="text-blue-600 font-semibold text-xs sm:text-sm uppercase" id="user-initials">EM</span>
+              <span class="text-blue-600 font-semibold text-xs sm:text-sm uppercase" id="user-initials"></span>
             </div>
           </div>
         </div>
