--- a/dashboard.html
+++ b/dashboard.html
@@ -218,8 +218,7 @@
 
           <div class="flex items-center gap-2 sm:gap-4">
             <div class="w-8 h-8 sm:w-10 sm:h-10 bg-blue-100 rounded-full flex items-center justify-center">
-              <span class="text-blue-600 font-semibold text-xs sm:text-sm uppercase" id="user-initials"></span>
-            </div>
+              <span class="text-blue-600 font-semibold text-xs sm:text-sm uppercase" id="user-initials"></span>          </div>
           </div>
         </div>
       </div>
@@ -347,33 +346,6 @@
     </div>
   </div>
 
-<script>
-// Mobile sidebar functionality
-const mobileMenuBtn = document.getElementById('mobile-menu-btn');
-const mobileSidebar = document.getElementById('mobile-sidebar');
-const sidebarOverlay = document.getElementById('sidebar-overlay');
-
-if (mobileMenuBtn && mobileSidebar && sidebarOverlay) {
-    function openSidebar() {
-        mobileSidebar.classList.remove('-translate-x-full');
-        sidebarOverlay.classList.remove('opacity-0', 'pointer-events-none');
-    }
-
-    function closeSidebar() {
-        mobileSidebar.classList.add('-translate-x-full');
-        sidebarOverlay.classList.add('opacity-0', 'pointer-events-none');
-    }
-
-    mobileMenuBtn.addEventListener('click', openSidebar);
-    sidebarOverlay.addEventListener('click', closeSidebar);
-
-    window.addEventListener('resize', () => {
-        if (window.innerWidth >= 1024) {
-            closeSidebar();
-        }
-    });
-}
-</script>
 <script src="./src/js/dashboard-view.js" type="module"></script>
 <script src="./src/js/dashboard-transactions.js" type="module" defer></script>
 <script type="module">
