--- a/profile.html
+++ b/profile.html
@@ -91,8 +91,7 @@
                 <span class="text-sm">Buy Crypto</span>
               </a>
               <a href="locked-savings.html" class="flex items-center gap-3 px-3 py-2.5 text-white hover:bg-gray-700 rounded-lg">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M19 5c-1.5 0-2.8 1-3.4 2.3C14.5 5.4 13.2 4 11.5 4c-1.7 0-3.2 1.4-3.5 3.2-1.4-.4-2.8.4-3.4 1.8"/><path d="m19 12-1.5-1.5a2.4 2.4 0 0 0-3.4 0L12 12.6V20a2 2 0 0 0 2 2h4a2 2 0 0 0 2-2v-3.4c0-1.1-.9-2-2-2Z"/><path d="M4 17.2V11a2 2 0 0 1 2-2h2"/><path d="M2 9.5c0-1.1.9-2 2-2h12c1.1 0 2 .9 2 2"/><path d="M10 17v1"/><path d="m16 9.3-1.8 1.8c-.8.8-2 .8-2.8 0L9.6 9.3"/></svg>
-                <span class="text-sm">Locked Savings</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M11 17h3v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-3a3.16 3.16 0 0 0 2-2h1a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-1a5 5 0 0 0-2-4V3a4 4 0 0 0-3.2 1.6l-.3.4H11a6 6 0 0 0-6 6v1a5 5 0 0 0 2 4v3a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1z"/><path d="M16 10h.01"/><path d="M2 8v1a2 2 0 0 0 2 2h1"/></svg>                <span class="text-sm">Locked Savings</span>
               </a>
               <a href="withdrawal.html" class="flex items-center gap-3 px-3 py-2.5 text-white hover:bg-gray-700 rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="m22 2-7 20-4-9-9-4Z"/><path d="M22 2 11 13"/></svg>
@@ -162,8 +161,7 @@
                   <span class="text-sm">Buy Crypto</span>
                 </a>
                 <a href="locked-savings.html" class="flex items-center gap-3 px-3 py-2.5 text-white hover:bg-gray-700 rounded-lg">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M19 5c-1.5 0-2.8 1-3.4 2.3C14.5 5.4 13.2 4 11.5 4c-1.7 0-3.2 1.4-3.5 3.2-1.4-.4-2.8.4-3.4 1.8"/><path d="m19 12-1.5-1.5a2.4 2.4 0 0 0-3.4 0L12 12.6V20a2 2 0 0 0 2 2h4a2 2 0 0 0 2-2v-3.4c0-1.1-.9-2-2-2Z"/><path d="M4 17.2V11a2 2 0 0 1 2-2h2"/><path d="M2 9.5c0-1.1.9-2 2-2h12c1.1 0 2 .9 2 2"/><path d="M10 17v1"/><path d="m16 9.3-1.8 1.8c-.8.8-2 .8-2.8 0L9.6 9.3"/></svg>
-                  <span class="text-sm">Locked Savings</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M11 17h3v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-3a3.16 3.16 0 0 0 2-2h1a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-1a5 5 0 0 0-2-4V3a4 4 0 0 0-3.2 1.6l-.3.4H11a6 6 0 0 0-6 6v1a5 5 0 0 0 2 4v3a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1z"/><path d="M16 10h.01"/><path d="M2 8v1a2 2 0 0 0 2 2h1"/></svg>                  <span class="text-sm">Locked Savings</span>
                 </a>
                 <a href="withdrawal.html" class="flex items-center gap-3 px-3 py-2.5 text-white hover:bg-gray-700 rounded-lg">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="m22 2-7 20-4-9-9-4Z"/><path d="M22 2 11 13"/></svg>
