feat: initial commit

--- a/dashboard.html
+++ b/dashboard.html
@@ -345,11 +345,8 @@
   </div>
 
 <script src="./src/js/dashboard-view.js" type="module"></script>
-<script src="./src/js/dashboard-transactions.js" type="module" defer></script>
-<script type="module">
-    import { initializeHeader } from './src/js/header.js';
-    document.addEventListener('DOMContentLoaded', initializeHeader);
-</script>
+<script src="./src/js/dashboard-transactions.js" type="module"></script>
+
 
 </body>
 </html>
