feat: initial commit

--- a/dashboard.html
+++ b/dashboard.html
@@ -343,7 +343,7 @@
       </div>
     </div>
   </div>
-
+<script src="./src/js/header.js" type="module"></script>
 <script src="./src/js/dashboard-view.js" type="module"></script>
 <script src="./src/js/dashboard-transactions.js" type="module"></script>
 
