--- a/locked-savings.html
+++ b/locked-savings.html
@@ -663,6 +663,7 @@
       initializeLogoutFeature('logout-button', null); // No specific cache key for this page
     });
   </script>
+<script src="./src/js/header.js" type="module"></script>
 
   <script type="module" src="/src/js/locked-savings-view.js"></script>
   <script type="module" src="/src/js/locked-savings-action.js"></script>
