--- a/withdrawal.html
+++ b/withdrawal.html
@@ -645,6 +645,7 @@
       initializeLogoutFeature('logout-button', null); // No specific cache key for this page
     });
   </script>
+<script src="./src/js/header.js" type="module"></script>
 
   <script type="module" src="/src/js/withdrawal.js"></script>
 </body>
