--- a/buy-crypto.html
+++ b/buy-crypto.html
@@ -252,15 +252,36 @@
           <!-- Portfolio Summary -->
           <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 lg:gap-6 mb-8">
             <div id="summary-total-investment-container" class="bg-gray-800 rounded-xl p-4 sm:p-6 shadow-sm">
-              <!-- Skeleton or real data will be injected here -->
+              <div class="flex items-center gap-3 mb-3">
+                  <div class="skeleton w-10 h-10 rounded-lg shrink-0"></div>
+                  <div class="flex-1 space-y-2">
+                      <div class="skeleton h-4 w-24"></div>
+                      <div class="skeleton h-6 w-32"></div>
+                  </div>
+              </div>
+              <div class="skeleton h-3 w-40"></div>
             </div>
 
             <div id="summary-current-value-container" class="bg-gray-800 rounded-xl p-4 sm:p-6 shadow-sm">
-              <!-- Skeleton or real data will be injected here -->
+              <div class="flex items-center gap-3 mb-3">
+                  <div class="skeleton w-10 h-10 rounded-lg shrink-0"></div>
+                  <div class="flex-1 space-y-2">
+                      <div class="skeleton h-4 w-24"></div>
+                      <div class="skeleton h-6 w-32"></div>
+                  </div>
+              </div>
+              <div class="skeleton h-3 w-40"></div>
             </div>
 
             <div id="summary-active-funds-container" class="bg-gray-800 rounded-xl p-4 sm:p-6 shadow-sm">
-              <!-- Skeleton or real data will be injected here -->
+              <div class="flex items-center gap-3 mb-3">
+                  <div class="skeleton w-10 h-10 rounded-lg shrink-0"></div>
+                  <div class="flex-1 space-y-2">
+                      <div class="skeleton h-4 w-24"></div>
+                      <div class="skeleton h-6 w-32"></div>
+                  </div>
+              </div>
+              <div class="skeleton h-3 w-40"></div>
             </div>
           </div>
 
@@ -503,7 +524,7 @@
       </div>
       
       <h3 class="text-lg sm:text-xl font-bold text-white mb-2">Processing Transaction</h3>
-      <p class="text-gray-400 mb-4 text-sm sm:text-base">Please wait while we process your Buy Crypto transaction...</p>
+      <p id="processing-message" class="text-gray-400 mb-4 text-sm sm:text-base">Please wait while we process your Buy Crypto transaction...</p>
       
       <!-- Progress bar -->
       <div class="w-full bg-gray-700 rounded-full h-2 mb-3">
